Added script to do linear UV scrolling.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -230,6 +230,7 @@
      <Compile Include="Assets\Scripts\InstantiateTest.cs" />
      <Compile Include="Assets\Scripts\ItemPickup.cs" />
      <Compile Include="Assets\Scripts\NetworkManager.cs" />
+     <Compile Include="Assets\Scripts\ScrollUVLinear.cs" />
      <Compile Include="Assets\Scripts\Spaceship\Spaceship.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipAudio.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipCamera.cs" />
