Switched font to Eurostile, added initial tutorial code, and added higher quality version of logo proto.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -243,6 +243,7 @@
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipGun.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipStatus.cs" />
      <Compile Include="Assets\Scripts\Timer.cs" />
+     <Compile Include="Assets\Scripts\TutorialManager.cs" />
      <Compile Include="Assets\TerrainToolkit\TerrainToolkit.cs" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.4.8.txt" />
