--- a/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
@@ -218,6 +218,10 @@
       <Project>{09B93BB3-EBD3-96ED-6D0D-7EBBDFEEBFB4}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
       <Project>{7BC80791-56A3-FFE0-BEBC-495788034C23}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{E7D41288-29CF-8DD3-37B6-527ACA83C344}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript.unityproj">
+      <Project>{F3F9E21F-A8C0-6C16-9917-DD6EA2EAD15E}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
