--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -233,6 +233,7 @@
      <Compile Include="Assets\Scripts\InputProfiles\SpaceshipKeyboardProfile2.cs" />
      <Compile Include="Assets\Scripts\InstantiateTest.cs" />
      <Compile Include="Assets\Scripts\ItemPickup.cs" />
+     <Compile Include="Assets\Scripts\Levels\Level.cs" />
      <Compile Include="Assets\Scripts\Levels\TutorialDriftEvent.cs" />
      <Compile Include="Assets\Scripts\Levels\TutorialManager.cs" />
      <Compile Include="Assets\Scripts\NetworkManager.cs" />
