Added functional Level and LevelManager clases. Main menu works as before w/ new classes.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -224,7 +224,7 @@
      <Compile Include="Assets\Scripts\GUI\HUD_Crosshairs.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Laps.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Timer.cs" />
-     <Compile Include="Assets\Scripts\GUI\MainMenuScript.cs" />
+     <Compile Include="Assets\Scripts\GUI\MainMenu.cs" />
      <Compile Include="Assets\Scripts\GameplayManager.cs" />
      <Compile Include="Assets\Scripts\GenerateTower.cs" />
      <Compile Include="Assets\Scripts\InputProfiles\CustomPlaystation4MacProfile.cs" />
@@ -234,6 +234,9 @@
      <Compile Include="Assets\Scripts\InstantiateTest.cs" />
      <Compile Include="Assets\Scripts\ItemPickup.cs" />
      <Compile Include="Assets\Scripts\Levels\Level.cs" />
+     <Compile Include="Assets\Scripts\Levels\LevelMainMenu.cs" />
+     <Compile Include="Assets\Scripts\Levels\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\Levels\LevelTutorial.cs" />
      <Compile Include="Assets\Scripts\Levels\TutorialDriftEvent.cs" />
      <Compile Include="Assets\Scripts\Levels\TutorialManager.cs" />
      <Compile Include="Assets\Scripts\NetworkManager.cs" />
