--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -228,16 +228,17 @@
      <Compile Include="Assets\Scripts\GUI\HUD_Manager.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Timer.cs" />
      <Compile Include="Assets\Scripts\GUI\MainMenu.cs" />
-     <Compile Include="Assets\Scripts\GameplayManager.cs" />
      <Compile Include="Assets\Scripts\GenerateTower.cs" />
      <Compile Include="Assets\Scripts\InstantiateTest.cs" />
-     <Compile Include="Assets\Scripts\Levels\Level.cs" />
-     <Compile Include="Assets\Scripts\Levels\LevelMainMenu.cs" />
-     <Compile Include="Assets\Scripts\Levels\LevelManager.cs" />
-     <Compile Include="Assets\Scripts\Levels\LevelTutorial.cs" />
-     <Compile Include="Assets\Scripts\Levels\TutorialDriftEvent.cs" />
-     <Compile Include="Assets\Scripts\Levels\TutorialManager.cs" />
-     <Compile Include="Assets\Scripts\NetworkManager.cs" />
+     <Compile Include="Assets\Scripts\LevelData\Level.cs" />
+     <Compile Include="Assets\Scripts\LevelData\LevelMainMenu.cs" />
+     <Compile Include="Assets\Scripts\LevelData\LevelTutorial.cs" />
+     <Compile Include="Assets\Scripts\LevelScripts\TutorialDriftEvent.cs" />
+     <Compile Include="Assets\Scripts\LevelScripts\TutorialManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\GameplayManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\NetworkManager.cs" />
+     <Compile Include="Assets\Scripts\Managers\RaceManager.cs" />
      <Compile Include="Assets\Scripts\Pickups\ItemPickup.cs" />
      <Compile Include="Assets\Scripts\Spaceship\Spaceship.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipAudio.cs" />
