--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -274,6 +274,7 @@
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\BloomShader.shader" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Premultiplied Colored (AlphaClip).shader" />
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\FisheyeShader.shader" />
+     <None Include="Assets\Shaders\Negative.shader" />
      <None Include="Assets\Plugins\Detonator\Resources\Detonator\Textures\HeatDistort.shader" />
      <None Include="Assets\Plugins\Standard Assets\Skyboxes\_skybox info.txt" />
      <None Include="Assets\Plugins\TrackBuildR\readme.txt" />
