Added functioning healthbar to GUI.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -224,6 +224,7 @@
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile2.cs" />
      <Compile Include="Assets\Scripts\ExplodeChildrenOnContact.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Crosshairs.cs" />
+     <Compile Include="Assets\Scripts\GUI\HUD_Health.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Laps.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Manager.cs" />
      <Compile Include="Assets\Scripts\GUI\HUD_Timer.cs" />
