Added better camera to prefabs and cleaned up LevelManager code a little bit.

--- a/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
@@ -175,6 +175,7 @@
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Colored.shader" />
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\Vignette.shader" />
      <None Include="Assets\Shaders\Cel.shader" />
+     <None Include="Assets\ConsolePro\Readme.txt" />
      <None Include="Assets\Shaders\Cel_FragTest.shader" />
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\StarBloom.shader" />
      <None Include="Assets\Plugins\iTween\ReadMe!\ReadMe!.txt" />
@@ -222,6 +223,9 @@
  </Reference>
  <Reference Include="UnityEditor.Android.Extensions">
  <HintPath>C:\Program Files (x86)\Unity\Editor\Data\PlaybackEngines\AndroidPlayer\EditorExtensions\UnityEditor.Android.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="ConsolePro.Editor">
+ <HintPath>Assets\ConsolePro\Editor\ConsolePro.Editor.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
