--- a/Lethal-Pursuit/Assembly-CSharp-firstpass-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-firstpass-vs.csproj
@@ -128,6 +128,7 @@
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Transparent Colored.shader" />
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\Vignette.shader" />
      <None Include="Assets\Shaders\Cel.shader" />
+     <None Include="Assets\ConsolePro\Readme.txt" />
      <None Include="Assets\Shaders\Cel_FragTest.shader" />
      <None Include="Assets\Plugins\ImageEffects\ShaderDir\StarBloom.shader" />
      <None Include="Assets\Plugins\iTween\ReadMe!\ReadMe!.txt" />
