--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -219,6 +219,7 @@
      <Compile Include="Assets\NGUI\Scripts\UI\UITooltip.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
      <Compile Include="Assets\Scripts\Checkpoints\Checkpoint.cs" />
+     <Compile Include="Assets\Scripts\Checkpoints\SpawnPoint.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\RazerHydraProfile.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile1.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile2.cs" />
