--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -232,6 +232,7 @@
      <Compile Include="Assets\Scripts\GUI\MainMenu.cs" />
      <Compile Include="Assets\Scripts\GenerateTower.cs" />
      <Compile Include="Assets\Scripts\InstantiateTest.cs" />
+     <Compile Include="Assets\Scripts\Interfaces\IDamageable.cs" />
      <Compile Include="Assets\Scripts\LevelData\Level.cs" />
      <Compile Include="Assets\Scripts\LevelData\LevelHighway.cs" />
      <Compile Include="Assets\Scripts\LevelData\LevelMainMenu.cs" />
@@ -251,6 +252,7 @@
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipEffects.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipGun.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipHealth.cs" />
+     <Compile Include="Assets\Scripts\Spaceship\SpaceshipMesh.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipRaceData.cs" />
      <Compile Include="Assets\Scripts\VFX\ScrollUVLinear.cs" />
      <Compile Include="Assets\Scripts\Weapons\Bullet.cs" />
