Added basic older lasers back in.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -273,6 +273,7 @@
      <Compile Include="Assets\Scripts\Rotate.cs" />
      <Compile Include="Assets\Scripts\Spaceship\Spaceship.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipAudio.cs" />
+     <Compile Include="Assets\Scripts\Spaceship\SpaceshipAuroraCannon.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipCamera.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipComponent.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipControl.cs" />
