--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -248,6 +248,7 @@
      <Compile Include="Assets\Scripts\ExplodeChildrenOnContact.cs" />
      <Compile Include="Assets\Scripts\ExplodeMesh.cs" />
      <Compile Include="Assets\Scripts\GUI\HudCrosshairs.cs" />
+     <Compile Include="Assets\Scripts\GUI\HudEnergy.cs" />
      <Compile Include="Assets\Scripts\GUI\HudHealth.cs" />
      <Compile Include="Assets\Scripts\GUI\HudManager.cs" />
      <Compile Include="Assets\Scripts\GUI\HudTimeRemaining.cs" />
