Pickups now work and respawn. Pickups can be repicked back up adter depleted.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -285,10 +285,11 @@
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipHealth.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipMatchData.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipMesh.cs" />
+     <Compile Include="Assets\Scripts\Spaceship\SpaceshipPickups.cs" />
      <Compile Include="Assets\Scripts\VFX\ScrollUVLinear.cs" />
+     <Compile Include="Assets\Scripts\Weapons\AuroraCannon.cs" />
      <Compile Include="Assets\Scripts\Weapons\Bullet.cs" />
      <Compile Include="Assets\Scripts\Weapons\Pickup.cs" />
-     <Compile Include="Assets\Scripts\Weapons\SpaceshipPickups.cs" />
      <Compile Include="Assets\TerrainToolkit\TerrainToolkit.cs" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.4.8.txt" />
