Added GUI for swapping out weapons

--- a/Lethal-Pursuit/Assembly-CSharp-Editor-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-Editor-vs.csproj
@@ -250,6 +250,9 @@
  <Reference Include="Assembly-UnityScript">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript.dll</HintPath>
  </Reference>
+ <Reference Include="Assembly-UnityScript-Editor-firstpass">
+ <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-Editor-firstpass.dll</HintPath>
+ </Reference>
  <Reference Include="ConsolePro.Editor">
  <HintPath>Assets\ConsolePro\Editor\ConsolePro.Editor.dll</HintPath>
  </Reference>
