--- a/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-Editor.csproj
@@ -287,6 +287,8 @@
       <Project>{E7D41288-29CF-8DD3-37B6-527ACA83C344}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-UnityScript.unityproj">
       <Project>{F3F9E21F-A8C0-6C16-9917-DD6EA2EAD15E}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript-Editor-firstpass.unityproj">
+      <Project>{B1D2E838-6680-CC96-55E8-72E0D9D6E273}</Project>      <Name>Assembly-UnityScript-Editor-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
