--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -247,6 +247,7 @@
      <Compile Include="Assets\Scripts\ExplodeChildrenOnContact.cs" />
      <Compile Include="Assets\Scripts\ExplodeMesh.cs" />
      <Compile Include="Assets\Scripts\GUI\HudCrosshairs.cs" />
+     <Compile Include="Assets\Scripts\GUI\HudCurrentWeapon.cs" />
      <Compile Include="Assets\Scripts\GUI\HudEnergy.cs" />
      <Compile Include="Assets\Scripts\GUI\HudHealth.cs" />
      <Compile Include="Assets\Scripts\GUI\HudManager.cs" />
