Added aurora cannons to Arena.

--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -243,6 +243,7 @@
      <Compile Include="Assets\Scripts\ControllerInputProfiles\RazerHydraProfile.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile1.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile2.cs" />
+     <Compile Include="Assets\Scripts\DestroyWhenDisabled.cs" />
      <Compile Include="Assets\Scripts\Destructable.cs" />
      <Compile Include="Assets\Scripts\ExplodeChildrenOnContact.cs" />
      <Compile Include="Assets\Scripts\ExplodeMesh.cs" />
