--- a/Lethal-Pursuit/Assembly-CSharp-vs.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp-vs.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_4;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_WEBPLAYER;WEBPLUG;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_AUDIO_FMOD;ENABLE_MONO;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_GENERICS;ENABLE_SUBSTANCE;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;UNITY_4_3_3;UNITY_4_3;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_OSX</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>/Applications/Unity/Unity.app/Contents/Frameworks/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>/Applications/Unity/Unity.app/Contents/Frameworks/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -240,6 +240,7 @@
      <Compile Include="Assets\NGUI\Scripts\UI\UITexture.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UITooltip.cs" />
      <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
+     <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\RazerHydraProfile.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile1.cs" />
      <Compile Include="Assets\Scripts\ControllerInputProfiles\SpaceshipKeyboardProfile2.cs" />
@@ -273,6 +274,9 @@
      <Compile Include="Assets\Scripts\Managers\SpawnManager.cs" />
      <Compile Include="Assets\Scripts\NetworkRigidBody.cs" />
      <Compile Include="Assets\Scripts\ParticleSystemAutoDestroy.cs" />
+     <Compile Include="Assets\Scripts\Pickups\Pickup.cs" />
+     <Compile Include="Assets\Scripts\Pickups\PickupAuroraCannon.cs" />
+     <Compile Include="Assets\Scripts\Pickups\PickupHealth.cs" />
      <Compile Include="Assets\Scripts\Pickups\PickupSpawnPoint.cs" />
      <Compile Include="Assets\Scripts\RenderOnTop.cs" />
      <Compile Include="Assets\Scripts\Rotate.cs" />
@@ -289,9 +293,6 @@
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipMesh.cs" />
      <Compile Include="Assets\Scripts\Spaceship\SpaceshipPickups.cs" />
      <Compile Include="Assets\Scripts\VFX\ScrollUVLinear.cs" />
-     <Compile Include="Assets\Scripts\Weapons\AuroraCannon.cs" />
-     <Compile Include="Assets\Scripts\Weapons\Bullet.cs" />
-     <Compile Include="Assets\Scripts\Weapons\Pickup.cs" />
      <Compile Include="Assets\TerrainToolkit\TerrainToolkit.cs" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.4.8.txt" />
@@ -393,13 +394,13 @@
      <None Include="Assets\NGUI\Examples\Models\Orc Armor\Orc Armor.shader" />
      <None Include="Assets\NGUI\Examples\Resources\Localization.txt" />
      <None Include="Assets\TerrainToolkit\Read me.txt" />
- <Reference Include="Assembly-UnityScript-firstpass">
+ <Reference Include="Library\ScriptAssemblies\Assembly-UnityScript-firstpass">
  <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
- <Reference Include="Mad2D">
+ <Reference Include="Assets\Energy Bar Toolkit\Scripts\Mad2D">
  <HintPath>Assets\Energy Bar Toolkit\Scripts\Mad2D.dll</HintPath>
  </Reference>
- <Reference Include="MadCommons">
+ <Reference Include="Assets\Energy Bar Toolkit\Scripts\MadCommons">
  <HintPath>Assets\Energy Bar Toolkit\Scripts\MadCommons.dll</HintPath>
  </Reference>
   </ItemGroup>
