--- a/Lethal-Pursuit/Assembly-CSharp.csproj
+++ b/Lethal-Pursuit/Assembly-CSharp.csproj
@@ -277,7 +277,7 @@
      <Compile Include="Assets\Scripts\Pickups\Pickup.cs" />
      <Compile Include="Assets\Scripts\Pickups\PickupAuroraCannon.cs" />
      <Compile Include="Assets\Scripts\Pickups\PickupHealth.cs" />
-     <Compile Include="Assets\Scripts\Pickups\PickupSpawnPoint.cs" />
+     <Compile Include="Assets\Scripts\Pickups\PickupSpawner.cs" />
      <Compile Include="Assets\Scripts\RenderOnTop.cs" />
      <Compile Include="Assets\Scripts\Rotate.cs" />
      <Compile Include="Assets\Scripts\Spaceship\Spaceship.cs" />
